# acts

./: .clang-tidy  .drone.yml  .gitlab-ci.yml  .gitmodules  .merge-sentinel.yml  .pre-commit-config.yaml  0001-ci-Bump-spack-version-itself.patch  CMakeLists.txt  CMakePresets.json  README.md  change.txt  notes.md  schema_base.py  schema_digi.py  schema_material.py  todo.md
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/dependencies/: action.yml
.github/workflows/: analysis.yml  builds.yml  devcontainer-test.yml  docs.yml  pr-lint.yml  pr_commands.yml  pr_lint.yml
Alignment/: CMakeLists.txt
CI/: check_milestone.py  release.py  release_requirements.in  release_requirements.txt
CI/clang_tidy/: limits.yml
CI/commands/: pr_commands.py
CI/dependencies/: setup.sh
CI/fpe_masks/: requirements.txt
CI/physmon/workflows/: physmon_truth_tracking_kalman.py
Core/: CMakeLists.txt
Core/src/Definitions/: CMakeLists.txt  ParticleData.cpp  ParticleDataTable.hpp  ParticleId.cpp
Core/src/Detector/: DetectorVolume.cpp  IndexedRootVolumeFinderBuilder.cpp  LayerStructureBuilder.cpp  Portal.cpp  PortalGenerators.cpp  TrackingVolume.cpp
Core/src/EventData/: MultiTrajectory.cpp  PrintParameters.cpp  TrackStatePropMask.cpp
Core/src/Geometry/: Blueprint.cpp  BlueprintNode.cpp  CMakeLists.txt  CuboidVolumeBuilder.cpp  CylinderContainerBlueprintNode.cpp  CylinderLayer.cpp  CylinderVolumeBounds.cpp  CylinderVolumeBuilder.cpp  CylinderVolumeHelper.cpp  DiscLayer.cpp  GenericApproachDescriptor.cpp  GeometryIdentifier.cpp  KDTreeTrackingGeometryBuilder.cpp  Layer.cpp  LayerArrayCreator.cpp  LayerCreator.cpp  NavigationLayer.cpp  PlaneLayer.cpp  PortalLinkBase.cpp  ProtoLayer.cpp  ProtoLayerHelper.cpp  StaticBlueprintNode.cpp  SurfaceArrayCreator.cpp  TrackingGeometry.cpp  TrackingGeometryBuilder.cpp  TrackingVolume.cpp
Core/src/Material/: MaterialGridHelper.cpp  MaterialMapUtils.cpp
Core/src/Navigation/: CMakeLists.txt  NavigationStateUpdaters.cpp  SurfaceArrayNavigationPolicy.cpp  TryAllNavigationPolicy.cpp
Core/src/Propagator/: CovarianceTransport.cpp
Core/src/Surfaces/: AnnulusBounds.cpp  ConeSurface.cpp  ConvexPolygonBounds.cpp  CylinderSurface.cpp  DiamondBounds.cpp  DiscSurface.cpp  DiscTrapezoidBounds.cpp  EllipseBounds.cpp  PlaneSurface.cpp  RadialBounds.cpp  RectangleBounds.cpp  Surface.cpp  SurfaceArray.cpp  TrapezoidBounds.cpp  VerticesHelper.cpp
Core/src/Tools/: CylinderVolumeHelper.cpp
Core/src/TrackFinding/: AmbiguityTrackClustering.cpp  CMakeLists.txt
Core/src/TrackFitting/: CMakeLists.txt  GainMatrixSmoother.cpp  GainMatrixUpdater.cpp
Core/src/Utilities/: CMakeLists.txt  Histogram.cpp  Logger.cpp
Core/src/Vertexing/: AdaptiveMultiVertexFinder.cpp
Core/src/Visualization/: GeometryView3D.cpp
Examples/Configs/: odd-digi-smearing-config.json
Examples/Framework/: CMakeLists.txt
Examples/HelloWorld/: CMakeLists.txt  HelloWhiteBoardAlgorithm.hpp
Examples/Python/: CMakeLists.txt  setup.sh.in
Examples/Scripts/: compareRootFiles.hpp  print_timing.py  requirements.txt
Fatras/: CMakeLists.txt
Fatras/Geant4/: CMakeLists.txt
Fatras/scripts/: generate_particle_data_table.py
Plugins/: CMakeLists.txt
Plugins/ActSVG/: CMakeLists.txt
Plugins/Covfie/: CMakeLists.txt
Plugins/Cuda/: CMakeLists.txt
Plugins/DD4hep/: CMakeLists.txt
Plugins/Detray/: CMakeLists.txt
Plugins/EDM4hep/: CMakeLists.txt
Plugins/ExaTrkX/: CMakeLists.txt
Plugins/FpeMonitoring/: CMakeLists.txt
Plugins/FpeMonitoring/include/Acts/Plugins/FpeMonitoring/: FpeMonitor.hpp
Plugins/Geant4/: CMakeLists.txt
Plugins/GeoModel/: CMakeLists.txt
Plugins/Hashing/: CMakeLists.txt
Plugins/Json/: CMakeLists.txt
Plugins/Legacy/: CMakeLists.txt
Plugins/Onnx/: CMakeLists.txt
Plugins/Podio/: CMakeLists.txt  edm.yml
Plugins/Podio/include/Acts/Plugins/Podio/: PodioTrackContainer.hpp  PodioTrackStateContainer.hpp  PodioUtil.hpp
Plugins/Podio/src/: PodioUtil.cpp
Plugins/Python/: CMakeLists.txt
Plugins/Root/: CMakeLists.txt
Plugins/TGeo/: CMakeLists.txt
Tests/: CMakeLists.txt
Tests/Benchmarks/: AnnulusBoundsBenchmark.cpp  BoundaryToleranceBenchmark.cpp  CMakeLists.txt  StepperBenchmarkCommons.hpp  SurfaceIntersectionBenchmark.cpp
Tests/CommonHelpers/: CMakeLists.txt
Tests/DownstreamProject/: CMakeLists.txt
Tests/DownstreamProjectNodeps/: CMakeLists.txt
Tests/FuzzTests/: CMakeLists.txt  InteractionsFuzz.cpp
Tests/IntegrationTests/: CMakeLists.txt  NavigatorConsistency.cpp  PropagationTests.hpp
Tests/UnitTests/: CMakeLists.txt
arrow_poc/: CMakeLists.txt  test.py
arrow_poc/src/: arrow_bridge.cpp
cmake/: ActsCompilerOptions.cmake  ActsFunctions.cmake  FindBacktrace.cmake  FindFastJet.cmake  SetupBoostStacktrace.cmake  setup_withdeps.sh.in
docs/: DOXYGEN_SETUP_COMPLETE.md  Doxyfile  doxy.md  doxy_full.md  getting_started.md  requirements.txt  typedefs.txt
docs/old/: Doxyfile
edm4hep_workflow/: .gitignore  Justfile  MG5_debug  Snakefile  args.py  config.py  config.toml  count_hepmc3.py  ddsim.py  ddsim_steering.py  debug_test_behavior.py  digitization.py  dihiggs.toml  gen_particle_gun.py  madgraph.py  main.py  mg.txt  pileup.toml  plot_basic_diagnostics.py  plot_hepmc.py  plot_hits.py  print_meas.py  py.py  pyproject.toml  read_digi.py  read_test.cpp  reconstruction.py  snakemake_config.yml  snakemake_config_debug.yml  ttbar.toml  ttbar_test.toml  ttbar_test.yaml  with_env.sh
edm4hep_workflow/samples/: dihiggs.toml  soft_qcd.toml  ttbar.toml
edm4hep_workflow/src/colliderml/: __init__.py  config.py  constants.py  logging.py  madgraph_parser.py  plot_basic_diagnostics.py  root.py  util.py
edm4hep_workflow/src/colliderml/cli/: args.py  cli.py  digitization.py  hepmc.py  madgraph.py  particle_gun.py  plot.py  plot_basic_diagnostics.py  pythia8.py  reconstruction.py  simulation.py  tree_size.py
edm4hep_workflow/tests/: __init__.py  conftest.py  test_card_parsers.py  test_fortran_fixer.py
edm4hep_workflow/tests/data/: pythia8_card_default.dat.expected  shower_card.dat.expected
notebooks/: test.ipynb  test.py
(+647 files in other folders)
