[project]
name = "colliderml"
version = "0.1.0"
description = "EDM4hep workflow package for ACTS simulation and reconstruction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "pyhepmc>=2.14.0",
    "rich>=14.1.0",
    "typer>=0.17.3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[project.scripts]
colliderml = "colliderml.cli.cli:app"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.setuptools.packages.find]
include = ["edm4hep_workflow*"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
